[package]
name = "rustyverse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
either = "1.8.0"
multibase = "0.9.1"
futures = "0.3"
anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1", features = ["full"] }
oauth2 = "4.2.0"
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
ipfs-api = "0.15.0"
url = "^2.2"
jsonwebtoken = "8"
chrono = "0.4"
argon2 = "0.4.0"
clap = { version = "3.1.18", features = ["derive"] }
libipld = "0.13.1"
cid = "0.8.5"
log = "0.4.0"
env_logger = "0.8.4"
serde_dhall = "0.12"
unidecode = "0.3.0"
activitypub_federation = "0.2.3"

[dependencies.uuid]
version = "1.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "serde"
]

[dependencies.surrealdb]
version = "1.0.0-beta.8"
default-features = false
features = ["parallel", "kv-rocksdb", "scripting", "http"]


# Juniper
[dependencies.juniper]
# TODO Temporary patch
git = "https://github.com/graphql-rust/juniper.git"
version = "0.16.0-dev"
# version = "0.15.10"
features = ["chrono"]

[dependencies.juniper_rocket]
# TODO Temporary patch
git = "https://github.com/graphql-rust/juniper.git"
version = "0.9.0-dev"

[dependencies.juniper_graphql_ws]
# TODO Temporary patch
git = "https://github.com/graphql-rust/juniper.git"
version = "0.4.0-dev"
# version = "0.3.0"

[dependencies.juniper_subscriptions]
# TODO Temporary patch
git = "https://github.com/graphql-rust/juniper.git"
# version = "0.17.0-dev"
version = "0.17.0-dev"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "tls"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc"
features = []

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = []

[dependencies.rocket_codegen]
version = "0.5.0-rc.2"

[package.metadata.nix]
build = true
